2007-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Fixed -affine command argument
	validation. Fixes SourceForge issue 1743141 "Affine matrix option
	parsing".

2007-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Handle case where compression
	keyword is present but has value of 'None'.

2007-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (AcquireMagickResource): Map resource limit
	was not being properly checked due to a typo.  The memory limit
	was being tested instead.

2007-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (XGetWindowImage): Set image->depth
	appropriately.

2007-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Fix reading 12-bit grayscale
	JPEG.

2007-04-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/art.c, coders.cut.c, coders/mat.c, coders/wpg.c: Add
	support for PingImage() so that image identification is fast by
	default.  Also eliminates error message produced by mat.c due to
	rotating an image which has no pixel cache.

2007-04-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (SyncBlob): Probable fix for SourceForge bug id
	1222780 "glibc detected double free or corruption". Avoid
	unnecessary copy of blob object onto itself. Fix was already
	present in 1.2.
	* magick/pixel_cache.c (ModifyCache): Ensure that the cache nexus
	is open.  Fix for SourceForge bug id 1173713 "segfault in
	ModifyCache"
	* m4/acx_pthread.m4 (ACX_PTHREAD): Apply fixes necessary to
	support C++ compiler properly.

2007-04-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c (ReadWPGImage): Fix for SourceForge bug id 1431805
	"clip art wpg files cause access violation in graphics magick".

2007-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/GraphicsMagick.pc.in: Fix for SourceForge bug id 1576616
	"Fix includedir variable in pkg-config files".