@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2007-07-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/psd.c (ReadPSDImage): Eliminate memory leak when reading
+        PSD files.  Fixes Sourceforge issue 1625477 "Memory leak reading
+        layered PSD Image".
+
+</UL>
+<p>
 2007-06-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
