@@ -1,3 +1,9 @@
+2007-07-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/psd.c (ReadPSDImage): Eliminate memory leak when reading
+	PSD files.  Fixes Sourceforge issue 1625477 "Memory leak reading
+	layered PSD Image".
+
 2007-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c: Fixed -affine command argument
